create notification page design

--- a/add.html
+++ b/add.html
@@ -25,7 +25,7 @@
               <li class="">
                 <a href="expenses.html">Dépenses</a>
               </li>
-              <li class="active" class="">
+              <li>
                 <a href="besoins.html">Besoins</a>
               </li>
               <!-- <li class="">
@@ -36,9 +36,9 @@
 
             <!-- Control Options -->
             <ul class="control-options">
-              <li>Add</li>
-              <li>notifications</li>
-              <li>paramètres</li>
+              <li><a href="add.html">Add</a></li>
+              <li><a href="notifications.html">Notifications</a></li>
+              <li><a href="settings.html">Paramètres</a></li>
             </ul>
             <!-- Control Options -->
           </nav>
