--- a/notifications.html
+++ b/notifications.html
@@ -7,6 +7,220 @@
     <title>Notifiction | Expenses Manager</title>
   </head>
   <body>
-    <h1>Notifications</h1>
+    <div id="_app">
+      <!-- Header -->
+
+      <div class="_section-container header">
+        <header class="header">
+          <!-- Brand logo -->
+          <div class="brand">Expenses</div>
+          <!-- Brand logo -->
+          <!-- Menu -->
+          <nav class="menu">
+            <!-- Nav Menu -->
+            <ul class="nav-menu">
+              <li>
+                <a href="index.html">Acceuil</a>
+              </li>
+              <li class="">
+                <a href="expenses.html">Dépenses</a>
+              </li>
+              <li>
+                <a href="besoins.html">Besoins</a>
+              </li>
+              <!-- <li class="">
+                  <a href="#">Aujourd'hui</a>
+                </li> -->
+            </ul>
+            <!-- Nav Menu -->
+
+            <!-- Control Options -->
+            <ul class="control-options">
+              <li><a href="add.html">Add</a></li>
+              <li><a href="notifications.html">Notifications</a></li>
+              <li><a href="settings.html">Paramètres</a></li>
+            </ul>
+            <!-- Control Options -->
+          </nav>
+          <!-- Menu -->
+        </header>
+      </div>
+
+      <!-- Header -->
+
+      <!-- Main -->
+      <div class="_section-container main">
+        <main>
+          <div id="notifications">
+            <h1>(23) Notifications</h1>
+            <h3 class="_text-primary">Vous avez 23 nouvelles notifications</h3>
+
+            <div class="_list">
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+              <!-- list item -->
+              <div class="_list-item">
+                <!-- Notification item -->
+                <div class="notification-card">
+                  <div class="notification-title">
+                    (3) Besoins à résoudre aujourd'hui
+                  </div>
+                  <div class="notification-description">
+                    Vous devez acheter un Smartphone, mode...
+                  </div>
+
+                  <div class="notification-date">à l'instant</div>
+                </div>
+                <!-- Notification item -->
+              </div>
+
+              <!-- list item -->
+            </div>
+          </div>
+        </main>
+      </div>
+
+      <!-- Main -->
+
+      <div class="_section-container footer">
+        <footer class="footer">
+          Open Source project - Build by will-oracions
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
