create expense details page

--- a/expense-details.html
+++ b/expense-details.html
@@ -30,10 +30,10 @@
                   <li>
                     <a href="index.html">Acceuil</a>
                   </li>
-                  <li class="">
+                  <li class="active">
                     <a href="expenses.html">Dépenses</a>
                   </li>
-                  <li class="active">
+                  <li>
                     <a href="besoins.html">Besoins</a>
                   </li>
                   <!-- <li class="">
@@ -60,10 +60,10 @@
           <div class="_section-container main">
             <main>
               <div id="_details">
-                <h1>Détails du besoin</h1>
+                <h1>Détails de la dépense</h1>
 
                 <div class="_field-group">
-                  <div class="_field-group-label">Nom du besoin</div>
+                  <div class="_field-group-label">Nom de la dépense</div>
                   <div class="_field-group-value">
                     Achat d'un nouveau smartphone
                   </div>
@@ -72,16 +72,6 @@
                 <div class="_field-group">
                   <div class="_field-group-label">Date</div>
                   <div class="_field-group-value">2 Novembre 2010</div>
-                </div>
-
-                <div class="_field-group">
-                  <div class="_field-group-label">Priorité</div>
-                  <div class="_field-group-value">Maximale</div>
-                </div>
-
-                <div class="_field-group">
-                  <div class="_field-group-label">Status</div>
-                  <div class="_field-group-value">[OK]</div>
                 </div>
 
                 <div class="_field-group">
@@ -97,11 +87,6 @@
                 <div class="_field-group">
                   <div class="_field-group-label">Montant de la dépense</div>
                   <div class="_field-group-value">85,000 XAF</div>
-                </div>
-
-                <div class="_field-group">
-                  <div class="_field-group-label">Date de solvabilité</div>
-                  <div class="_field-group-value">12 Février 2011</div>
                 </div>
               </div>
             </main>
